<resources>
    <string name="app_name">Artist ex Machina</string>
    <string name="title">Artist\nex Machina</string>
    <string name="location">location</string>
    <string name="temperature">temperature</string>
    <string name="lightLevels">light levels : </string>
    <string name="positionX">position x : </string>
    <string name="positionY">position y : </string>
    <string name="positionZ">position z : </string>
    <string name="buttonTitle">view image</string>
    <string name="start">go!</string>
    <string name="stop">stop</string>
    <string name="artistBusy1">Please hold still while I finish painting      </string>
    <string name="artistBusy2">Please hold still while I finish painting .    </string>
    <string name="artistBusy3">Please hold still while I finish painting . .  </string>
    <string name="artistBusy4">Please hold still while I finish painting . . .</string>
    <string name="gallery">gallery</string>
    <string name="sit_for_a_portrait">sit for a portrait</string>
    <string name="about">About this app</string>
    <string name="album_storage_name">artist_ex_machina</string>
    <string name="data_type_steps">data_type_steps</string>
    <string name="data_type_location">data_type_location</string>
    <string name="data_type_position">data_type_linear_acceleration</string>
    <string name="data_type_distance">data_type_distance</string>
    <string name="data_type_light">data_type_light</string>
    <string name="data_sets">data sets</string>
    <string name="albers_image">Albers Image</string>
    <string name="automatic_drawing">Automatic Drawing</string>
    <string name="abstract_shapes">Abstract Shapes</string>
    <string name="scroll_left">&lt;&lt; scroll left</string>
    <string name="scroll_right">scroll right &gt;&gt;</string>
    <string name="image_not_saved">image not saved</string>
    <string name="image_saved">image saved</string>
    <string name="save">+</string>
    <string name="delete">-</string>
    <string name="data_title">Data used to create this artwork: </string>
    <string name="about_para_1"><b>You hold in your hand a machine</b> of incredible complexity. A machine that can record things about the world surrounding you, in details more meticulous than you could ever perceive, and then consider and translate them in the flip of a bit into forms that would take you hours to recreate. If this machine can think, can it create? </string>
    <string name="about_para_2">This app has been designed to take information it collects from the world around it and use it to create works of art, inspired by pioneering computer artists of the 60s such as Hiroshi Kawano and Harold Cohen. These artists looked at art as a logical activity, concerned more with the algorithmic procedure of drawing and the mathematics of geometry than with freedom of expression (1). Harold Cohen and the program he designed, AARON, could create hugely complex abstract drawings, led by algorithms designed by Cohen to increase AARON’s knowledge of composition and colour (2). </string>
    <string name="about_para_3">Other important artistic movements that have influenced this app such as Fluxus, and Aleatory musicians, have adopted algorithmic practices and used elements of random chance in their creative processes. This has helped them to find ways to create things not bound by decision making, and transfer some of the creative responsibility from the artist to the spectator (3). </string>
    <string name="about_para_4">This app takes these ideas as inspiration, and in conjunction with you, will create works of art influenced by the measurements it collects. It can create works of art in five different styles, influenced by the following artists: </string>
    <string name="about_styles">Each of the five different styles of image this application can produce were inspired by the following artists:</string>
    <string name="about_biblio">References \n1. Kawano, H. What is Computer Art? R Leavitt. Artist and Computer, 1976, pp. 112-113 \n2. Cohen, P. Harold Cohen and AARON. AI Magazine. Winter, 2016, Vol. 4, 37.\n3. Dezeuze, Anna. The \'do-it-yourself\' artwork. Manchester University Press, 2010.</string>
    <string name="paolozzi_caption">Eduardo Paolozzi, Four German Songs, 1976</string>
    <string name="henry_caption">Desmond Henry, Desmond Paul Henry 1963</string>
    <string name="albers_caption">Josef Albers, Formulation : Articulation, Folio I / Folder 5, 1972</string>
    <string name="saville_caption">Peter Saville, record sleeve for Unknown Pleasures, Factory, 1979</string>
    <string name="masson_caption">André Masson, Furious Suns, 1925</string>
    <string name="about_caption_1">left: Cohen, H: Walk in Rio, 2015    right: Kawano, H: Design 3-1. Data 4, 5, 6, 6, 6, 1964</string>
    <string name="instructions">instructions</string>
    <string name="how_to_use">How to use this app</string>
    <string name="how_to_description">This app has been designed to allow your mobile phone to create images using data generated by your movements and the light levels the phone is exposed to. It is designed to capture this information over a relatively short period of time (typically 0 – 180 seconds).</string>
    <string name="draw_button">Begin a new drawing</string>
    <string name="start_button">press this button to begin recording your movements and light levels</string>
    <string name="stop_button">press this button to stop recording data, and to create pictures using the gathered information</string>
    <string name="gallery_button">Gallery of saved images</string>
    <string name="share_button">Share this image with another app</string>
    <string name="save_button">Save this image</string>
    <string name="delete_button">Delete this image</string>
    <string name="data_button">View data used to make this image</string>
</resources>
