<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.17000002"
                    app:srcCompat="@drawable/gradient_button" />

                <TextView
                    android:id="@+id/para1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="14dp"
                    android:fontFamily="sans-serif"
                    android:paddingTop="50dp"
                    android:text="@string/about_para_1"
                    android:textAlignment="textStart"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/para2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/about_para_2"
                android:textAlignment="center"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/cohen" />

                <ImageView
                    android:id="@+id/kawano"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/kawano" />
            </LinearLayout>

            <TextView
                android:id="@+id/caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/about_caption_1"
                android:textSize="11sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/para3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/about_para_3"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/para4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/about_para_4"
                android:textAlignment="center"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/paolozzi_image"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/paolozzi" />

            <TextView
                android:id="@+id/paolozzi_caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/paolozzi_caption"
                android:textAlignment="center"
                android:textSize="11sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/masson_image"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/masson" />

            <TextView
                android:id="@+id/masson_caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/masson_caption"
                android:textAlignment="center"
                android:textSize="11sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/albers_image"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/albers" />

            <TextView
                android:id="@+id/albers_caption"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/albers_caption"
                android:textAlignment="center"
                android:textSize="11sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/saville_image"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/saville" />

            <TextView
                android:id="@+id/saville_caption"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/saville_caption"
                android:textAlignment="center"
                android:textSize="11sp"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/henry_image"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/henry" />

            <TextView
                android:id="@+id/henry_caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/henry_caption"
                android:textAlignment="center"
                android:textSize="11sp"
                android:textStyle="italic" />



            <TextView
                android:id="@+id/biblio"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/about_biblio"
                android:textStyle="italic" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
